@@ -1,4 +1,4 @@
-.TH VIFM 1 "January 31, 2019" "vifm 0.10"
+.TH VIFM 1 "February 10, 2019" "vifm 0.10"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -1375,7 +1375,7 @@ the 'aproposprg' option.
 .TP
 .BI ":au[tocmd] {event} {pat} {cmd}"
 register autocommand for the {event}, which can be:
-  \- DirEnter \- performed on entering a directory
+  \- DirEnter \- triggered after directory is changed
 .br
 Event name is case insensitive.
 
