@@ -91,6 +91,9 @@
 
 	Fixed graphics leftovers after leaving explore mode.
 
+	Fixed DirEnter autocommand being called with view being in a mixed state
+	of old and new location.  Thanks to Kendrick Taylor (a.k.a. sixcircuit).
+
 0.10-beta to 0.10 (2018-11-11)
 
 	Display list of files in removal confirmation dialog.  Thanks to ovk.
